# DS606_project

./: .gitignore  =0.25.0  =1.11.4  DS606_Project_Documentation.md  DS606_Project_Documentation.tex  EVALUATE_INITIAL_RESPONSE.md  EVALUATION_GUIDE.md  EVALUATION_IMPLEMENTATION.md  INITIAL_RESPONSE_IMPLEMENTATION.md  JUNIORS_TASKS.md  MULTILINGUAL_PIPELINE_GUIDE.md  ONE_PAGE_SUMMARY.md  QUICK_FIX.md  README.md  SERVER_SETUP.md  START_HERE.md  TASK_TRACKING.md  analysis.ipynb  batch.sh  batch_dpo_training.sh  batch_english.sh  batch_pipeline.sh  gtrans_attn.ipynb  install_translation_deps.sh  jailbreak_just_question.csv  llamaguard.ipynb  pyproject.toml  requirements.txt  setup.py  setup_server.sh
configs/: datasets.yaml  exp_default.yaml  models.yaml  training_dpo.yaml  training_sft.yaml
logs/: ds606_project_4004.err  ds606_project_4059.err  ds606_project_4059.out  ds606_project_4060.err  ds606_project_4060.out  ds606_project_4061.err  ds606_project_4061.out  ds606_project_4062.err  ds606_project_4062.out  ds606_project_4299.err  ds606_project_4299.out  ds606_project_4508.err  ds606_project_4542.err  ds606_project_4556.err  ds606_project_5178.err  ds606_project_5194.err  ds606_project_5197.err  ds606_project_5206.err
models/dpo/: README.md  adapter_config.json
models/dpo_old/: README.md
outputs/evaluation_results/: bengali_summary.json  hindi_summary.json
outputs/evaluations/: evaluation_results.csv  (+3 more)
scripts/: diagnose_tokenizer_consistency.py  evaluate_multilingual_with_translation.py  evaluate_per_language.py  init_repo.py  test_evaluate_initial.py
(+32 files in other folders)
